[gd_scene load_steps=5 format=3 uid="uid://d33ey25jdpimv"]

[ext_resource type="Script" uid="uid://b80hdq3ug5e08" path="res://scenes/game/minigame_data.gd" id="1_8p414"]
[ext_resource type="Texture2D" uid="uid://b6mj3aiurm4vx" path="res://assets/tiles/oreMine.png" id="2_0wkj4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nknyf"]
texture = ExtResource("2_0wkj4")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_csx57"]
tile_size = Vector2i(128, 128)
sources/1 = SubResource("TileSetAtlasSource_nknyf")

[node name="MinigameData" type="Node2D"]
script = ExtResource("1_8p414")

[node name="mineWindow" type="Node2D" parent="."]

[node name="oreMap" type="TileMapLayer" parent="mineWindow"]
position = Vector2(-20, 0)
tile_set = SubResource("TileSet_csx57")

[node name="moveCounter" type="Label" parent="mineWindow"]
offset_right = 40.0
offset_bottom = 23.0

[node name="returnSurface" type="Node2D" parent="mineWindow"]

[node name="Back" type="Button" parent="mineWindow/returnSurface"]
offset_right = 64.0
offset_bottom = 64.0

[node name="Stats" type="RichTextLabel" parent="mineWindow/returnSurface"]
offset_top = 64.0
offset_right = 640.0
offset_bottom = 304.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 100.0
offset_bottom = 100.0
color = Color(0.3420558, 0.3819355, 0.08479307, 0.5647059)

[connection signal="pressed" from="mineWindow/returnSurface/Back" to="." method="_on_back_pressed"]
